[package]
name = "ebay-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { version = "0.5.0", features = ["tokio-runtime"], default-features = false }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.16.0"
tokio = "1.26.0"
log = "0.4.19"
fern = "0.6.2"
chrono = "0.4.30"